--- a/index.html
+++ b/index.html
@@ -6,37 +6,40 @@
 </head>
 <body>
 	<div id="catlist">
-		<button id='button1'>cat 1</button>
-		<button id='button2'>cat 2</button>
-		<button id='button3'>cat 3</button>
-		<button id='button4'>cat 4</button>
-		<button id='button5'>cat 5</button>
+		<!--<button id='button1'>cat 1</button>-->
+		<!--<button id='button2'>cat 2</button>-->
+		<!--<button id='button3'>cat 3</button>-->
+		<!--<button id='button4'>cat 4</button>-->
+		<!--<button id='button5'>cat 5</button>-->
 	</div>
-	<div class='cat' id='cat1'>
-		<span class='counter'>0</span> clicks
-		<br>
-		<img class='clicker' src="cat1.jpg" alt="">
+	<div id="catView">
+		
 	</div>
-	<div class='cat' id='cat2'>
-		<span class='counter'>0</span> clicks
-		<br>
-		<img class='clicker' src="cat2.jpg" alt="">
-	</div>
-	<div class='cat' id='cat3'>
-		<span class='counter'>0</span> clicks
-		<br>
-		<img class='clicker' src="cat3.jpg" alt="">
-	</div>
-	<div class='cat' id='cat4'>
-		<span class='counter'>0</span> clicks
-		<br>
-		<img class='clicker' src="cat4.jpg" alt="">
-	</div>
-		<div class='cat' id='cat5'>
-		<span class='counter'>0</span> clicks
-		<br>
-		<img class='clicker' src="cat5.jpg" alt="">
-	</div>
+	<!--<div class='cat' id='cat1'>-->
+	<!--	<span class='counter'>0</span> clicks-->
+	<!--	<br>-->
+	<!--	<img class='clicker' src="cat1.jpg" alt="">-->
+	<!--</div>-->
+	<!--<div class='cat' id='cat2'>-->
+	<!--	<span class='counter'>0</span> clicks-->
+	<!--	<br>-->
+	<!--	<img class='clicker' src="cat2.jpg" alt="">-->
+	<!--</div>-->
+	<!--<div class='cat' id='cat3'>-->
+	<!--	<span class='counter'>0</span> clicks-->
+	<!--	<br>-->
+	<!--	<img class='clicker' src="cat3.jpg" alt="">-->
+	<!--</div>-->
+	<!--<div class='cat' id='cat4'>-->
+	<!--	<span class='counter'>0</span> clicks-->
+	<!--	<br>-->
+	<!--	<img class='clicker' src="cat4.jpg" alt="">-->
+	<!--</div>-->
+	<!--	<div class='cat' id='cat5'>-->
+	<!--	<span class='counter'>0</span> clicks-->
+	<!--	<br>-->
+	<!--	<img class='clicker' src="cat5.jpg" alt="">-->
+	<!--</div>-->
 </body>
 <script src="app.js"></script>
 </html>
