--- a/index.html
+++ b/index.html
@@ -25,12 +25,42 @@
 				<div class="col-xs-6">
 					<img class="img-responsive img-rounded" id="catImg"></img>
 				</div>
+				<div class="col-xs-2"></div>
 				<div class="col-xs-4">
 					<div class="panel panel-default" id="catInfo">
 						<div class="panel-heading">
 							<h3 class="panel-title" id='catName'></h3>
 						</div>
 						<div class="panel-body">Clicked: <span id='counter'></span> times</div>
+					</div>
+					<button id="adminBtn" class="btn btn-default">Admin</button>
+				</div>
+
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="panel panel-default" id="adminPanel">
+					<div class="panel-heading">
+						<h3 class="panel-title">Edit Cat Info</h3>
+					</div>
+					<div class="panel-body">
+						<form>
+							<div class="form-group">
+								<label for="catName">Cat Name</label>
+								<input type="text" class="form-control" id="catName" placeholder="Enter cat name">
+							</div>
+							<div class="form-group">
+								<label for="catURL">Cat URL</label>
+								<input type="text" class="form-control" id="catURL" placeholder="Enter URL for Cat Image">
+							</div>
+							<div class="form-group">
+								<label for="catClick">Edit # of Clicks</label>
+								<input type="number" class="form-control" id="catClick" placeholder="Input number of clicks">
+							</div>
+							<div id="cancel" class="btn btn-default">Cancel</div>
+							<div id="save" class="btn btn-default">Save</div>
+						</form>
 					</div>
 				</div>
 			</div>
